# highload-homework

./: CMakeLists.txt  Dockerfile  server.conf
httptest/: wikipedia_russia.html
src/server/: config.cpp  config.hpp  connection.cpp  connection.hpp  header.hpp  mime_types.cpp  mime_types.hpp  posix_main.cpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  win_main.cpp
